<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="add">"Agregar"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
    <string name="login">Login</string>
    <string name="cobro_pendiente">Cobros Pendientes</string>
    <string name="sales">Ventas</string>
    <string name="pending_payment">Cobros pendientes</string>
    <string name="custmomer">Clientes</string>
    <string name="products">Productos</string>
    <string name="add_sale">Agregar Venta</string>
    <string name="add_product">Agregar producto</string>
    <string name="product_name">Nombre de producto</string>
    <string name="product_price">Precio</string>
    <string name="cancel">Cancelar</string>
    <string name="purchase_price">Precio de compra:</string>
    <string name="sale_price">Precio de venta: </string>
    <string name="description">Descripción:</string>
    <string name="stock">Stock (Inventario): </string>
    <string name="error_field_required">Valor es requerido</string>
    <string name="image_des">Descripción de imagen</string>
    <string name="image_des_ic_share">Compartir</string>
    <string name="save">Guardar</string>
    <string name="customer_name">Nombre:</string>
    <string name="name">Nombre:</string>
    <string name="phone">Telefono:</string>
    <string name="address">Direccion</string>
    <string name="email">Email</string>
    <string name="product">Producto</string>
    <string name="quantity">Cantidad</string>
    <string name="credito">Credito</string>
    <string name="efectivo">Efectivo</string>
    <string name="parcial">Abono Parcial</string>
    <string name="edit_customer">Editar</string>
    <string name="sale">Vender</string>
    <string name="report_sale">Historial de Ventas</string>
    <string name="editar">Editar</string>
    <string name="vender">Vender</string>
    <string name="discount">Descuento (%)</string>
    <string name="total">Total: </string>
    <string name="unit_price">Precio Unitario</string>
    <string name="sale_type">Tipo de venta</string>
    <string name="contado">Contado</string>
    <string name="acept">Aceptar</string>
    <string name="confirm_sale">Confirmar la venta del producto por un total de: %s </string>
    <string name="amount">Cantidad: </string>
    <string-array name="sales_types">
        <item>@string/credito</item>
        <item>@string/contado</item>
    </string-array>
</resources>