<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlProduct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/idProduct"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/quantity"
            app:layout_constraintTop_toBottomOf="@+id/tlProduct"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/quantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/sale_price"
            app:layout_constraintTop_toBottomOf="@+id/tlQuantity"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tlPrice"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.chip.Chip
                    android:id="@+id/credito"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/credito" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.chip.Chip
                    android:id="@+id/efectivo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/efectivo" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <com.google.android.material.chip.Chip
                    android:id="@+id/parcial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/parcial" />
            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.chip.ChipGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/save"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/uno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial" /><com.google.android.material.chip.Chip
                android:id="@+id/qw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial" /><com.google.android.material.chip.Chip
                android:id="@+id/qwe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial" /><com.google.android.material.chip.Chip
                android:id="@+id/unqweqeo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parcial" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tlStock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/stock"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/save"
            app:layout_constraintTop_toBottomOf="@+id/tlStock"
            tools:layout_editor_absoluteX="16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>